Issue #1812588 and #1812590 by jpontani: number of attendees defaults to 0; add js/css to limit legend size for registration settings/topics summary area to hide overflow

--- a/css/commons_events.css
+++ b/css/commons_events.css
@@ -1,6 +1,8 @@
-#edit-events-sidebar legend {
-  width: auto;
-  min-width: 250px;
+#edit-events-sidebar legend .summary {
+  width: 375px;
+  overflow: hidden;
+  line-height: 1em;
+  height: 1em;
 }
 
 #edit-events-sidebar .fieldset-legend .fieldset-title {
@@ -13,4 +15,21 @@
 
 .view-commons-events-event-attendee-list {
   background-color: #fff;
+}
+
+/**
+ * Fix fieldset margins for date and address field since they have weird
+ * spacing issues.
+ */
+#edit-field-date .fieldset-description {
+  display: none;
+}
+#edit-field-date .date-padding {
+  padding: 0px !important;
+}
+#edit-field-date .fieldset-wrapper .form-item:first-child,
+#edit-field-date .form-item .form-item, 
+#edit-field-address .fieldset-wrapper .form-item:first-child,
+#edit-field-address .form-item {
+  margin-top: 0em !important;
 }
